# djr

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/: issue.yml
.github/workflows/: issue.yml
src/: argparse.rs  help.rs  help.txt  main.rs  version.rs
