[package]
name = "djr-cli"
version = "0.1.0"
authors = ["Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2021"
license = "MIT"
description = "Djot rendering CLI based on the djr crate"
repository = "https://github.com/kmaasrud/djr"
keywords = ["djot", "markup", "cli"]
categories = ["text-processing"]
readme = "README.md"

[[bin]]
name = "djr"
path = "src/main.rs"

[dependencies]
djr = { git = "https://git.sr.ht/~kmaasrud/djr" }

[build-dependencies]
cargo-lock = "8.0.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
