[package]
name = "djr"
version = "0.0.2"
authors = ["Knut Magnus Aasrud <km@aasrud.com>"]
edition = "2021"
license = "MIT"
description = "Djot rendering CLI based on the djot crate"
repository = "https://github.com/kmaasrud/djot.rs"
keywords = ["djot", "markup", "cli"]
categories = ["text-processing"]
readme = "README.md"

[[bin]]
name = "djr"
path = "src/main.rs"

[dependencies]
djot = "0.0.1"

[build-dependencies]
cargo-lock = "8.0.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
